# xcvfda

./: .gitignore  Cargo.toml  Dioxus.toml  Justfile  README.md  index.html
public/: camera.js  detect_face.js  manifest.json  sw.js
src/: content.rs  footer.rs  header.rs  main.rs
