[package]
name = "xcvfda"
version = "0.1.0"
description = "Cross-platform Computer Vision Face Detection Application"
authors = ["xTekC"]
repository = "https://github.com/xTekC/xcvfda"
readme = "README.md"
homepage = "https://github.com/xTekC/xcvfda"
documentation = "https://github.com/xTekC/xcvfda/blob/main/README.md"
categories = ["web-programming"]
keywords = ["wasm", "web"]
publish = false
# include = "[...]"
# exclude = "[...]"
# workspace = "..."
# links = "..."
# build = "build.rs"
rust-version = "1.72.0"
edition = "2021"
license = "MPL-2.0"


[dependencies]
dioxus = "0.4.0"
dioxus-web = "0.4.0"
wasm-bindgen = "0.2.87"

log = "0.4.6"

# WebAssembly Debug
wasm-logger = "0.2.0"
console_error_panic_hook = "0.1.7"
